--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mills House Applications</title>
+    <title>{{ dashboard_title }}</title>
     <link rel="icon" href="/static/images/M.webp" type="image/x-icon">
     <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
     <div class="dashboard-container">
-        <h1>Mills House Applications</h1>
+        <h1>{{ dashboard_title }}</h1>
 
         <!-- Tiles Container -->
         <div class="tiles-container" id="tiles-container"></div>
